fixing code appearance in dark mode

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -228,6 +228,10 @@ code {
     border: 1px solid $grey-color-light;
     border-radius: 3px;
     background-color: #f5f5f5;
+    @media (prefers-color-scheme: dark) {
+        background-color: #373737;
+        border: 1px solid $dark-grey-color-light;
+    }
 }
 
 code {
